static-sites: fix

--- a/history-dates/index.html
+++ b/history-dates/index.html
@@ -58,7 +58,7 @@
 </head>
 <body>
     <div id="slide" class="slide visible"><h1>Повторение дат и событий</h1><p id="event" class="event"></p></div>
-    <image src="./qr.svg" class="qr-code" />
+    <img src="./qr.svg" class="qr-code" />
     <script>
         const slides = [
             ["1914, 19 июля (1 августа)", "Объявление Германией войны России. Начало Первой мировой войны для России"],
