--- a/history-dates/index.html
+++ b/history-dates/index.html
@@ -53,6 +53,7 @@
             top: 10px;
             left: 10px;
             width: min(15vw, 15vh);
+            z-index: 10;
         }
     </style>
 </head>
