history-dates: qr code

--- a/history-dates/index.html
+++ b/history-dates/index.html
@@ -52,14 +52,14 @@
             position: absolute;
             top: 10px;
             left: 10px;
-            width: min(15vw, 15vh);
-            z-index: 10;
+            width: min(20vw, 20vh);
+            z-index: 99;
         }
     </style>
 </head>
 <body>
     <div id="slide" class="slide visible"><h1>Повторение дат и событий</h1><p id="event" class="event"></p></div>
-    <img src="qr.svg" class="qr-code" alt="" />
+    <img src="https://yegorweb.github.io/static-sites/history-dates/qr.png" class="qr-code" alt="" />
     <script>
         const slides = [
             ["1914, 19 июля (1 августа)", "Объявление Германией войны России. Начало Первой мировой войны для России"],
